--- a/Mascotas/View/Base.lproj/Main.storyboard
+++ b/Mascotas/View/Base.lproj/Main.storyboard
@@ -15,18 +15,6 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="eGg-3b-20n">
-                                <rect key="frame" x="16" y="97" width="361" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
-                                    <segment title="Third"/>
-                                    <segment title="Fourth"/>
-                                </segments>
-                            </segmentedControl>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -36,7 +24,7 @@
             </objects>
             <point key="canvasLocation" x="985.49618320610682" y="-34.507042253521128"/>
         </scene>
-        <!--pets-->
+        <!--Table View Controller-->
         <scene sceneID="vIZ-xI-9eN">
             <objects>
                 <tableViewController id="Mh7-oB-Kqo" customClass="TableViewController" customModule="Mascotas" customModuleProvider="target" sceneMemberID="viewController">
@@ -59,11 +47,11 @@
                             <outlet property="delegate" destination="Mh7-oB-Kqo" id="qUD-aF-agG"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="pets" image="pawprint" catalog="system" id="9dD-2A-Q4p"/>
+                    <navigationItem key="navigationItem" id="w6O-E1-MWO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yvi-fh-8wx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="740" y="732"/>
+            <point key="canvasLocation" x="1666.4122137404579" y="731.69014084507046"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="BoP-Mu-3Zd">
@@ -77,12 +65,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="0Wo-mu-Ddk"/>
-                        <segue destination="Mh7-oB-Kqo" kind="relationship" relationship="viewControllers" id="yfE-oO-Awy"/>
+                        <segue destination="KYm-3Z-z0K" kind="relationship" relationship="viewControllers" id="yfE-oO-Awy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OZT-x6-Kz5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="58.778625954198468" y="-34.507042253521128"/>
+        </scene>
+        <!--pets-->
+        <scene sceneID="vJ2-bR-UQT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KYm-3Z-z0K" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="pets" image="pawprint" catalog="system" id="9dD-2A-Q4p"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DbC-YH-Stt">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Mh7-oB-Kqo" kind="relationship" relationship="rootViewController" id="Tha-wG-6HP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TSS-5N-zxo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="739.69465648854964" y="731.69014084507046"/>
         </scene>
     </scenes>
     <resources>
