--- a/Mascotas/View/Base.lproj/Main.storyboard
+++ b/Mascotas/View/Base.lproj/Main.storyboard
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kk4-AL-QfP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Dj-oG-okr">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--home-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Intro View Controller-->
+        <scene sceneID="xPQ-6m-A9N">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Mascotas" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="7Dj-oG-okr" customClass="IntroViewController" customModule="Mascotas" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pzr-3U-As1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XWj-kc-Yn7">
+                                <rect key="frame" x="283" y="701" width="94" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="siguiente"/>
+                                <connections>
+                                    <segue destination="Mh7-oB-Kqo" kind="presentation" modalPresentationStyle="fullScreen" id="ohD-CZ-Hah"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zgL-eq-X87"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="home" image="homekit" catalog="system" id="jbq-xN-aVg"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="84p-4z-qlm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="985.49618320610682" y="-34.507042253521128"/>
+            <point key="canvasLocation" x="219" y="129"/>
         </scene>
-        <!--Table View Controller-->
+        <!--pets-->
         <scene sceneID="vIZ-xI-9eN">
             <objects>
                 <tableViewController id="Mh7-oB-Kqo" customClass="TableViewController" customModule="Mascotas" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,53 +57,14 @@
                             <outlet property="delegate" destination="Mh7-oB-Kqo" id="qUD-aF-agG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="w6O-E1-MWO"/>
+                    <tabBarItem key="tabBarItem" title="pets" image="pawprint" catalog="system" id="9dD-2A-Q4p"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yvi-fh-8wx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1666.4122137404579" y="731.69014084507046"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="BoP-Mu-3Zd">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Kk4-AL-QfP" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="scY-8b-3nN">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="0Wo-mu-Ddk"/>
-                        <segue destination="KYm-3Z-z0K" kind="relationship" relationship="viewControllers" id="yfE-oO-Awy"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OZT-x6-Kz5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="58.778625954198468" y="-34.507042253521128"/>
-        </scene>
-        <!--pets-->
-        <scene sceneID="vJ2-bR-UQT">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KYm-3Z-z0K" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="pets" image="pawprint" catalog="system" id="9dD-2A-Q4p"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DbC-YH-Stt">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Mh7-oB-Kqo" kind="relationship" relationship="rootViewController" id="Tha-wG-6HP"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TSS-5N-zxo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="739.69465648854964" y="731.69014084507046"/>
+            <point key="canvasLocation" x="1001" y="129"/>
         </scene>
     </scenes>
     <resources>
-        <image name="homekit" catalog="system" width="128" height="104"/>
         <image name="pawprint" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
